syntax = "proto3";

option csharp_namespace = "UserService";
import "google/protobuf/wrappers.proto";

package user;

service UserService {
  rpc UpdateUser (UpdateUserRequest) returns (UserVoidReply);
  rpc DeleteUser (DeleteUserRequest) returns (UserVoidReply);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserReply);
  rpc GetUserByTag (GetUserByTagRequest) returns (GetUserReply);
}


message GetUserByTagRequest{
    string tag = 1;
}


message GetUserByIdRequest{
    int32 user_id = 1;
}


message UserVoidReply{}



message UpdateUserRequest{
     int32 id = 1;
     string first_name = 2;
     string second_name = 3;
     string last_name = 4;
     string phone_number = 5;
}

message DeleteUserRequest{
    int32 user_id = 1;
}

message CreateUserRequest{
     string first_name = 1;
     string second_name = 2;
     string last_name = 3;
     string phone_number = 4;
     string email = 5;
     string password = 6;
}


message GetUserReply {
     string first_name = 1;
     string second_name = 2;
     string last_name = 3;
     string phone_number = 4;
     string email = 5;
     string tag = 6;
          google.protobuf.Int32Value id = 7;

}
